feat: setup mysql

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,2 +1,6 @@
-# remove .example from filename and paste your connection string below
-MONGODB_URI="<connection string to your MongoDB Atlas or local db>"
+PORT=4000
+HOST='localhost'
+DATABASE_PORT=3306
+DATABASE_USERNAME='root'
+DATABASE_PASSWORD='your_password'
+DATABASE_NAME='jewelry_store'
