--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,9 @@
   },
   "dependencies": {
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mysql2": "^3.2.3",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.15"
   }
 }
